--- a/src/CSS/SISLRATEST.css
+++ b/src/CSS/SISLRATEST.css
@@ -36,18 +36,9 @@ h2 {
   margin-top: 0px;
   cursor: default;
 }
-h2.pro {
-  color: #ff0000;
-  margin: 0px;
-}
-h2.street {
-  color: #00ff00;
-  margin: 0px;
-}
-h2.bike {
-  color: #3333ff;
-  margin: 0px;
-}
+h2.pro {color: #ff0000;}
+h2.street {color: #00ff00;}
+h2.bike {color: #3333ff;}
 h3 {
   font-size: 18px;
   color: #FC0;
@@ -81,7 +72,37 @@ h6 {
 }
 ::selection {
     color: #FFF;
-    background: #999;
+    background: #BBB;
+}
+
+.modal-content {background-color: #141414;}
+
+.modal-title {
+  color: #FC0;
+  text-align: center;
+  font-size: 22px;
+}
+.modal-header {border-bottom: 1px solid #555;}
+.modal-body {text-align: left; width: 100%; margin: auto;}
+.modal-footer {
+  text-align: center;
+  border-top: none;
+}
+.close, .close:hover {color: #FFF;}
+label {
+  font-size: 18px;
+  margin: 0px;
+  margin-top: 10px;
+}
+input {
+  color: #FFF;
+  width: 100%;
+  border: 2px solid #141414;
+  border-radius: 4px;
+  background-color: #555;
+  padding: 5px;
+  font-size: 18px;
+  text-align: center;
 }
 
 /* ------------- Header Content --------------- */
@@ -367,73 +388,73 @@ h6 {
   margin-bottom: 15px;
 }
 .poster:hover {opacity: 0.7;}
-/* The Modal (background) */
-.modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 2000; /* Sit on top */
-  padding-top: 35px; /* Location of the box */
-  left: 0;
-  top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.8); /* Black w/ opacity */
-  color: #fff;
-}
-/* Modal Content (image) */
-.modal-content {
-  margin: auto;
-  display: block;
-  width: auto;
-  max-height: 95%;
-}
-/* Caption of Modal Image */
-#caption {
-  margin: auto;
-  display: block;
-  width: 100%;
-  max-width: 700px;
-  text-align: center;
-  color: #fff;
-  padding: 10px 0;
-  height: 15px;
-}
-/* Add Animation */
-.modal-content, #caption {
-  -webkit-animation-name: zoom;
-  -webkit-animation-duration: 0.6s;
-  animation-name: zoom;
-  animation-duration: 0.6s;
-}
-@-webkit-keyframes zoom {
-  from {-webkit-transform: scale(0)}
-  to {-webkit-transform: scale(1)}
-}
-@keyframes zoom {
-  from {transform: scale(0.1)}
-  to {transform: scale(1)}
-}
-/* Close Button */
-.close {
-  position: absolute;
-  top: 50px;
-  right: 15px;
-  color: #FFF;
-  font-size: 40px;
-  font-weight: bold;
-  transition: 0.3s;
-}
-.close:hover, .close:focus {
-  color: #bbb;
-  text-decoration: none;
-  cursor: pointer;
-}
-/* 100% Image Width on Smaller Screens */
-@media only screen and (max-width: 700px){
-  .modal-content {width: 100%;}
-}
+/* /* The Modal (background) */ 
+/* .modal { */
+  /* display: none; /* Hidden by default */ 
+  /* position: fixed; /* Stay in place */ 
+  /* z-index: 2000; /* Sit on top */ 
+  /* padding-top: 35px; /* Location of the box */ 
+  /* left: 0; */
+  /* top: 0; */
+  /* width: 100%; /* Full width */ 
+  /* height: 100%; /* Full height */ 
+  /* overflow: auto; /* Enable scroll if needed */ 
+  /* background-color: rgb(0,0,0); /* Fallback color */ 
+  /* background-color: rgba(0,0,0,0.8); /* Black w/ opacity */ 
+  /* color: #fff; */
+/* } */
+/* /* Modal Content (image) */ 
+/* .modal-content { */
+  /* margin: auto; */
+  /* display: block; */
+  /* width: auto; */
+  /* max-height: 95%; */
+/* } */
+/* /* Caption of Modal Image */ 
+/* #caption { */
+  /* margin: auto; */
+  /* display: block; */
+  /* width: 100%; */
+  /* max-width: 700px; */
+  /* text-align: center; */
+  /* color: #fff; */
+  /* padding: 10px 0; */
+  /* height: 15px; */
+/* } */
+/* /* Add Animation */ 
+/* .modal-content, #caption { */
+  /* -webkit-animation-name: zoom; */
+  /* -webkit-animation-duration: 0.6s; */
+  /* animation-name: zoom; */
+  /* animation-duration: 0.6s; */
+/* } */
+/* @-webkit-keyframes zoom { */
+  /* from {-webkit-transform: scale(0)} */
+  /* to {-webkit-transform: scale(1)} */
+/* } */
+/* @keyframes zoom { */
+  /* from {transform: scale(0.1)} */
+  /* to {transform: scale(1)} */
+/* } */
+/* /* Close Button */ 
+/* .close { */
+  /* position: absolute; */
+  /* top: 50px; */
+  /* right: 15px; */
+  /* color: #FFF; */
+  /* font-size: 40px; */
+  /* font-weight: bold; */
+  /* transition: 0.3s; */
+/* } */
+/* .close:hover, .close:focus { */
+  /* color: #bbb; */
+  /* text-decoration: none; */
+  /* cursor: pointer; */
+/* } */
+/* /* 100% Image Width on Smaller Screens */
+/* @media only screen and (max-width: 700px){ */
+  /* .modal-content {width: 100%;} */
+/* } */
 
 /* ------------- Sponsors -------------- */
 .TableSponsors {
@@ -772,9 +793,6 @@ img {border: 0;}
   body {background-color: #000}
   .shade {background: none;}
   .Webbanner {display: none;}
-  /* Center navbar-brand img */
-  .navbar-brand {position: absolute; width: 100%;}
-  .navbar-brand>img {margin: auto;}
   .marquee {display: none;}
   .slideshow {display: none;}
   .indexTableHeader {
