--- a/src/CSS/SISLRA.css
+++ b/src/CSS/SISLRA.css
@@ -76,19 +76,13 @@ h6 {
 }
 
 .modal-content {background-color: #141414;}
-
-.modal-title {
-  color: #FC0;
-  text-align: center;
-  font-size: 22px;
-}
+.modal-content img {margin: auto;display: block;width: 100%;}
+.modal-title {color: #FC0;text-align: center;font-size: 22px;}
 .modal-header {border-bottom: 1px solid #555;}
-.modal-body {text-align: left; width: 100%; margin: auto;}
-.modal-footer {
-  text-align: center;
-  border-top: none;
-}
+.modal-body {text-align: left;width: 100%;margin: auto;}
+.modal-footer {text-align: center; border-top: none;}
 .close, .close:hover {color: #FFF;}
+
 label {
   font-size: 18px;
   margin: 0px;
@@ -129,59 +123,35 @@ input {
 .navbar-inverse .navbar-nav>.dropdown>a:hover .caret {border-top-color: #FFFFFF;}
 .navbar-inverse .navbar-nav>.dropdown>a .caret {border-bottom-color: #999999;}
 .navbar-inverse .navbar-nav>.dropdown>a:hover .caret {border-bottom-color: #FFFFFF;}
-.fadeIn {-webkit-animation-duration: 0.1s;}
   
-/* ------------- IndexCountDown ------------ */
-.indexTableHeader {
+/* ------------- CountDown ------------ */
+.CountDownTable {
   display: table;
   width: 100%;
   margin: auto;
   margin-top: 0%;
   margin-bottom: 2.8%;
   text-align: center;
+  text-shadow: 2px 2px #000;
   -webkit-animation-delay: 1s;
 }
-.indexTableHeader-row {
-  display: table-row;
-}
-.indexTableHeader-section {
+.CountDownTable-row {display: table-row;}
+.CountDownTable-section {
   display: table-cell;
   width: 30%;
   font-size: 20px;
 }
-#SISLRARace {
+.CountDownTable-section>h3 {
+  font-size: 18px;
+  color: #FC0;
+  line-height: 30px;
+  letter-spacing: 0px;
+  margin: 0px;
+}
+.CountDownTable-section>div {
   color: #FFF;
   font-weight: bold;
   font-size: 15px;
-  text-shadow: 2px 2px #000;
-}
-#PortMcNeill {
-  color: #FFF;
-  font-weight: bold;
-  font-size: 15px;
-  text-shadow: 2px 2px #000;
-}
-#PortAlberni {
-  color: #FFF;
-  font-weight: bold;
-  font-size: 15px;
-  text-shadow: 2px 2px #000;
-}
-.sislraDate:after {
-  text-shadow: 2px 2px #000;
-  padding-left: 15px;
-  padding-right: 15px;
-  content: " Next SISLRA Race "
-}
-.RumbleOnTheRunwayDate:after {
-  text-shadow: 2px 2px #000;
-  content: "Next Rumble on the Runway"
-}
-.ThunderInTheValleyDate:after {
-  text-shadow: 2px 2px #000;
-  padding-left: 5px;
-  padding-right: 5px;
-  content: " Thunder in The Valley "
 }
 
 /* ------------- Marquee ------------- */
@@ -189,28 +159,20 @@ input {
   height: 24px;
   width: 100%;
   margin-top: 10px;
-
   color:#FD0;
   font: Arial Black;
   font-weight: bold;
   font-size: 16px;
-  
-  border: 2px solid #FC0;
-  border-radius: 10px 10px 10px 10px;
-
   overflow: hidden;
   position: relative;
-  
   -webkit-animation-delay: 1s;
 }
 .marquee div {
   display: block;
   width: 200%;
   height: 35px;
-
   position: absolute;
   overflow: hidden;
-
   animation: marquee 13s linear infinite;
 }
 .marquee span {
@@ -220,11 +182,6 @@ input {
 @keyframes marquee {
   0% { left: 0; }
   100% { left: -100%; }
-}
-#indexMarquee {
-  margin: 0px;
-  border: none;
-  border-radius: 0px 0px 0px 0px;
 }
 .marqueeInfo:after {
   text-shadow: 2px 2px #000;
@@ -247,7 +204,7 @@ input {
   width: 100%;
   height: auto;
 }
-.slideshow > img {
+.slideshow>img {
   position: absolute;
   width: 100%;
   height: auto;
@@ -256,19 +213,10 @@ input {
 /* -------------- End of header content ------------- */
 
 /* -------------- Index --------------- */
-.indexPointsWinners {
-  font-size: 18px;
-}
-.indexWinnersTable {
-  margin: auto;
-  text-align: center;
-}
-.indexWinnersTable img {
-  width: 190px;
-}
-.indexWinnersTable td{
-  padding: 0px 5px 0px 0px;
-}
+.indexPointsWinners {font-size: 18px;}
+.indexWinnersTable {margin: auto; text-align: center;}
+.indexWinnersTable img {width: 190px;}
+.indexWinnersTable td{padding: 0px 5px 0px 0px;}
 
 /* --------------- indexSchedule ------------ */
 .current {color: #0CF;}
@@ -373,9 +321,6 @@ input {
 	text-align: center;
 }
 #Posters {margin-top: 15px;}
-.posterMobile {display: none;}
-
-/* Modal */
 .poster {
   border-radius: 5px;
   cursor: pointer;
@@ -388,73 +333,6 @@ input {
   margin-bottom: 15px;
 }
 .poster:hover {opacity: 0.7;}
-/* /* The Modal (background) */ 
-/* .modal { */
-  /* display: none; /* Hidden by default */ 
-  /* position: fixed; /* Stay in place */ 
-  /* z-index: 2000; /* Sit on top */ 
-  /* padding-top: 35px; /* Location of the box */ 
-  /* left: 0; */
-  /* top: 0; */
-  /* width: 100%; /* Full width */ 
-  /* height: 100%; /* Full height */ 
-  /* overflow: auto; /* Enable scroll if needed */ 
-  /* background-color: rgb(0,0,0); /* Fallback color */ 
-  /* background-color: rgba(0,0,0,0.8); /* Black w/ opacity */ 
-  /* color: #fff; */
-/* } */
-/* /* Modal Content (image) */ 
-/* .modal-content { */
-  /* margin: auto; */
-  /* display: block; */
-  /* width: auto; */
-  /* max-height: 95%; */
-/* } */
-/* /* Caption of Modal Image */ 
-/* #caption { */
-  /* margin: auto; */
-  /* display: block; */
-  /* width: 100%; */
-  /* max-width: 700px; */
-  /* text-align: center; */
-  /* color: #fff; */
-  /* padding: 10px 0; */
-  /* height: 15px; */
-/* } */
-/* /* Add Animation */ 
-/* .modal-content, #caption { */
-  /* -webkit-animation-name: zoom; */
-  /* -webkit-animation-duration: 0.6s; */
-  /* animation-name: zoom; */
-  /* animation-duration: 0.6s; */
-/* } */
-/* @-webkit-keyframes zoom { */
-  /* from {-webkit-transform: scale(0)} */
-  /* to {-webkit-transform: scale(1)} */
-/* } */
-/* @keyframes zoom { */
-  /* from {transform: scale(0.1)} */
-  /* to {transform: scale(1)} */
-/* } */
-/* /* Close Button */ 
-/* .close { */
-  /* position: absolute; */
-  /* top: 50px; */
-  /* right: 15px; */
-  /* color: #FFF; */
-  /* font-size: 40px; */
-  /* font-weight: bold; */
-  /* transition: 0.3s; */
-/* } */
-/* .close:hover, .close:focus { */
-  /* color: #bbb; */
-  /* text-decoration: none; */
-  /* cursor: pointer; */
-/* } */
-/* /* 100% Image Width on Smaller Screens */
-/* @media only screen and (max-width: 700px){ */
-  /* .modal-content {width: 100%;} */
-/* } */
 
 /* ------------- Sponsors -------------- */
 .TableSponsors {
@@ -510,8 +388,8 @@ input {
 }
 .contactUsTable tr:nth-child(even) {background-color: #222;}
 .contactUsTable tr:hover {background-color: #333}
-#contactPhone {width: 95px;}
-#VolunteerNeeded {color: #FF0000;}
+.contactPhone {width: 95px;}
+.VolunteerNeeded>td {background-color: #F00;}
 
 /* ------------- About Us ------------- */
 #aboutUsImg {
@@ -731,7 +609,6 @@ img {border: 0;}
 .menu {
   border-radius: 3px;
   padding: 5px;
-  /* box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24); */
   box-shadow: 5px 5px 10px #080808;
 }
 .aside {
@@ -740,7 +617,6 @@ img {border: 0;}
   color: #ffffff;
   text-align: center;
   font-size: 14px;
-  /* box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24); */
   box-shadow: 5px 5px 10px #080808;
 }
 .indexPointsList p {
@@ -752,7 +628,7 @@ img {border: 0;}
 .mainCenter {margin-left: 20.5%;}  
 .footer {padding: 15px;}
 
-@media (min-width: 768px) and (max-width: 1010px) { 
+@media (min-width: 768px) and (max-width: 1120px) { 
   /* Collapse Nav Bar To avoid ugliness */
   .navbar-collapse.collapse {display: none !important;}
   .navbar-collapse.collapse.in {display: block !important;}
@@ -795,7 +671,7 @@ img {border: 0;}
   .Webbanner {display: none;}
   .marquee {display: none;}
   .slideshow {display: none;}
-  .indexTableHeader {
+  .CountDownTable {
     display: table;
     width: auto;
     margin: auto;
@@ -803,15 +679,13 @@ img {border: 0;}
     margin-bottom: 15px;
     text-align: center;
   }
-  .indexTableHeader-section {
+  .CountDownTable-section {
     display: table-row;
     margin: auto;
     font-size: 20px;
   }
   #SISLRALogo-Footer {width: 60%;}
   #pMembers {width: 100%;}
-  .poster {display: none;}
-  .posterMobile {display: initial; width: 80%; height: auto;}
 }
 
 @media only screen and (max-width: 650px) { 
