--- a/src/CSS/SISLRA.css
+++ b/src/CSS/SISLRA.css
@@ -274,7 +274,7 @@ input {
   color: #FC0;
   font-size: 17px;
   font-weight: bold;
-  content: "14/5/2017"
+  content: "8/6/2017"
 }
 #pMembers {
   width: 80%;
@@ -300,7 +300,7 @@ input {
 
 /* ------------- Events ----------- */
 .activeSchedule {
-  width: 40%;
+  width: 42%;
   margin: auto;
   border: 4px solid #FC0; 
   cursor: default;
@@ -437,40 +437,40 @@ a:hover {
 }
 a:active {color: #997a00; text-shadow: -2px -2px #000; text-decoration: none;}
 
-.fa-facebook {color: #4666aa; padding: 5px; margin-left: 10px;}
+.fa-facebook {color: #4666aa; padding: 5px; margin-left: 10px;-webkit-animation-delay: 1.3s;}
 .fa-facebook:hover {color: #8098cb; text-shadow: 2px 2px #000; -webkit-transition: color .4s linear; -moz-transition: color .4s linear; -o-transition: color .4s linear; transition: color .4s linear;}
 .fa-facebook:active {color: #2c416d; text-shadow: -2px -2px #000;}
 
-.fa-twitter{color: #1da1f2; padding: 5px;}
+.fa-twitter{color: #1da1f2; padding: 5px;-webkit-animation-delay: 1.5s;}
 .fa-twitter:hover {color: #6ec2f7; text-shadow: 2px 2px #000; -webkit-transition: color .4s linear; -moz-transition: color .4s linear; -o-transition: color .4s linear; transition: color .4s linear;}
 .fa-twitter:active {color: #0a6ca9; text-shadow: -2px -2px #000;}
 
-.fa-instagram{color: #FFFFFF; padding: 5px;}
+.fa-instagram{color: #FFFFFF; padding: 5px;-webkit-animation-delay: 1.4s;}
 .fa-instagram:hover {color: #d10869; text-shadow: 2px 2px #000; -webkit-transition: color .4s linear; -moz-transition: color .4s linear; -o-transition: color .4s linear; transition: color .4s linear;}
 .fa-instagram:active {color: #7b043e; text-shadow: -2px -2px #000;}
 
-.fa-youtube-play{color: #e72e24; padding: 5px; margin-right: 10px;}
+.fa-youtube-play{color: #e72e24; padding: 5px; margin-right: 10px;-webkit-animation-delay: 1.2s;}
 .fa-youtube-play:hover {color: #f07b75; text-shadow: 2px 2px #000; -webkit-transition: color .4s linear; -moz-transition: color .4s linear; -o-transition: color .4s linear; transition: color .4s linear;}
 .fa-youtube-play:active {color: #a11912; text-shadow: -2px -2px #000;}
 
 /* ------------- Alerts ------------- */
 .alert {font-size: 15px;}
 
-.callout{padding:15px;margin-bottom:20px;border:1px solid #999999;border-left-width:5px;border-right-width:5px;border-radius:3px}
+.callout{padding:15px;margin-bottom:15px;border:1px solid #141414;border-left-width:5px;border-radius:3px}
 .callout h4{margin-top:0;margin-bottom:5px;font-size: 20px;}
 .callout p:last-child{margin-bottom:0;}
 .callout code{border-radius:3px;}
 .callout+.bs-callout{margin-top:-5px;}
-.callout-info{border-left-color:#0CF;border-right-color:#0CF;background-color: #00141a;}
+.callout-info{border-left-color:#0CF;background-color: #00141a;}
 .callout-info h4{color:#0CF;}
 .callout-info p{color:#0CF;}
-.callout-success{border-left-color:#00cc00;border-right-color:#00cc00;background-color: #001a00;}
+.callout-success{border-left-color:#00cc00;background-color: #001a00;}
 .callout-success h4{color:#00cc00;}
 .callout-success p{color:#00cc00;}
-.callout-warning{border-left-color:#CC0;border-right-color:#CC0;background-color: #1a1a00;}
+.callout-warning{border-left-color:#CC0;background-color: #1a1a00;}
 .callout-warning h4{color:#CC0;}
 .callout-warning p{color:#CC0;}
-.callout-danger{border-left-color:#ce4844;border-right-color:#ce4844;background-color: #140605;}
+.callout-danger{border-left-color:#ce4844;background-color: #140605;}
 .callout-danger h4{color:#ce4844;}
 .callout-danger p{color:#ce4844;}
 
@@ -547,12 +547,14 @@ a:active {color: #997a00; text-shadow: -2px -2px #000; text-decoration: none;}
 #SISLRALogo-Footer {
   width: 310px;
   margin: 0 auto;
+  -webkit-animation-delay: 1s;
 }
 
 /* ------------- Spinning Tire with Smoke ------------- */
 #spiningTire {
   display: block;
   position: relative;
+  width: 100%;
   margin: auto;
   margin-top: 48px;
 }
@@ -562,7 +564,7 @@ a:active {color: #997a00; text-shadow: -2px -2px #000; text-decoration: none;}
   /* margin-top: -54%; */
   /* margin-left: 16%; */
   top: -70px;
-  left: 75px;
+  left: 60px;
   margin: auto;
 }
 .spin {
