--- a/src/CSS/SISLRA.css
+++ b/src/CSS/SISLRA.css
@@ -174,6 +174,7 @@ input {
 }
 .CountDownTable-section>div {
   color: #FFF;
+  margin-bottom: 10px;
   font-weight: bold;
   font-size: 15px;
 }
@@ -718,6 +719,9 @@ img {border: 0;}
     display: table-row;
     margin: auto;
     font-size: 20px;
+  }
+  .CountDownTable-section>div {
+    margin-bottom: 0px;
   }
   #SISLRALogo-Footer {width: 60%;}
   #pMembers {width: 100%;}
